--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
  <title>A Very Simple Page</title>
 </head>
 <body>
-<h1>Welcome to XXX Website</h1>
+<h1>Welcome to Sybau Website</h1>
 <img Src+"images/Profile.jpeg" Width="240" height+"300" alt+"my photo"/>
 <hr>
 <h2>About Me</h2>
-<p>i am a very imaginative person. <br>  
-<br>I dream day and night . Wanna to talk to me, Got to wake me up</p>
+<p>i lowkey am a very imaginative person. <br>  
+<br>I dream day and night . Wanna talk to me, Got to wake me up from bed.</p>
 <h2>My School</h2>
-<p> I am currently study at <a href="http:www.nyp.edu.sg"> Secondary school</a></p>
-<p> There are 4 Ssubjects I study in school</p>
+<p> I am currently study at <a href="http:www.nyp.edu.sg"> Nanyang Polytechnic</a></p>
+<p> There are 5 Subjects I study in school</p>
 <ol>
 <li>English</li>
 <li>Math</li>
 <li>Science</li>
-<li>History</li>
+<li>Geography/Social Studies</li>
+<li>Additional Math</li>
   
 </ol>
-<p>I am lerning to make a website using html tags and javascript.</p>
-<p>I create a game at <a href="guessImages.html"> Guess the image</a></p>
+<p>I am learning to make a website using html tags and javascript.</p>
+<p>I created a game at <a href="guessImages.html"> Guess the image</a></p>
 <p>xxx copyright &copy;</p>
 </body>
 </html>
