--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <li>Additional Math</li>
   
 </ol>
-<p>I am learning to make a website using html tags and javascript.</p>
+<p>I am learning to make a website using html tags and javascript ts pmo.</p>
 <p>I created a game at <a href="guessImages.html"> Guess the image</a></p>
 <p>xxx copyright &copy;</p>
 </body>
