--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Welcome to Sybau Website</h1>
-<img Src+"images/Profile.jpeg" Width="240" height+"300" alt+"my photo"/>
+<img Src="images/Profile.jpeg" Width="240" height+"300" alt+"my photo"/>
 <hr>
 <h2>About Me</h2>
 <p>i lowkey am a very imaginative person. <br>  
