--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <li>Science</li>
 <li>Geography/Social Studies</li>
 <li>Additional Math</li>
+<li>Gurt:yo</li>
   
 </ol>
 <p>I am learning to make a website using html tags and javascript ts pmo.</p>
